[28102024]: Update pom versions and optimize code